Changelog for mk-index-usage:

   * Added progress reports to the schema & table inventory (issue 1174).

2010-10-09: version 0.9.2

   * Added --save-results-database option (issue 1015).
   * Added --create-save-results-database option (issue 1015).
   * Added --empty-save-results-tables option (issue 1015).
   * Added --[no]report option (issue 1015).
   * Added --report-format option (issue 1015).
   * Added standard schema object filter options (--databases, --tables, etc).

2010-09-11: version 0.9.1

   * Default database was changed by iterating schema (issue 1140).
   * Added --database (-D) option (issue 1118).
   * UPDATE LOW_PRIORITY was not parsed correctly (issue 1111).

2010-06-08: version 0.9.0

   * Initial release.