@@ -3948,7 +3948,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# IndexUsage package 6952
+# IndexUsage package 7028
 # This package is a copy without comments from the original.  The original
 # with comments and its test file can be found in the SVN repository at,
 #   trunk/common/IndexUsage.pm
@@ -3968,34 +3968,12 @@ sub new {
  
    my $self = {
       %args,
-      tables_for  => {}, # Keyed off db
-      indexes_for => {}, # Keyed off db->tbl
+      tables_for      => {}, # Keyed off db
+      indexes_for     => {}, # Keyed off db->tbl
+      queries         => {}, # Keyed off query id
+      index_usage     => {}, # Keyed off query id->db->tbl
+      alt_index_usage => {}, # Keyed off query id->db->tbl->index
    };
-
-   my $dbh = $args{dbh};
-   my $db  = $args{db};
-   if ( $dbh && $db ) {
-      MKDEBUG && _d("Saving results to tables in database", $db);
-      $self->{save_results} = 1;
-
-      $self->{insert_index_sth} = $dbh->prepare(
-         "INSERT INTO `$db`.`indexes` (db, tbl, idx) VALUES (?, ?, ?) "
-         . "ON DUPLICATE KEY UPDATE usage_cnt = usage_cnt + 1");
-      $self->{insert_query_sth} = $dbh->prepare(
-         "INSERT IGNORE INTO `$db`.`queries` (query_id, fingerprint, sample) "
-         . " VALUES (CONV(?, 16, 10), ?, ?)");
-      $self->{insert_tbl_sth} = $dbh->prepare(
-         "INSERT INTO `$db`.`tables` (db, tbl) "
-         . "VALUES (?, ?) "
-         . "ON DUPLICATE KEY UPDATE usage_cnt = usage_cnt + 1");
-      $self->{insert_index_usage_sth} = $dbh->prepare(
-         "INSERT IGNORE INTO `$db`.`index_usage` (query_id, db, tbl, idx) "
-         . "VALUES (CONV(?, 16, 10), ?, ?, ?)");
-      $self->{insert_index_alt_sth} = $dbh->prepare(
-         "INSERT IGNORE INTO `$db`.`index_alternatives` "
-         . "(query_id, db, tbl, idx, alt_idx) "
-         . "VALUES (CONV(?, 16, 10), ?, ?, ?, ?)");
-   }
 
    return bless $self, $class;
 }
@@ -4008,19 +3986,27 @@ sub add_indexes {
    }
    my ($db, $tbl, $indexes) = @args{@required_args};
 
-   $self->{tables_for}->{$db}->{$tbl}  = 0;
-   if ( $self->{save_results} ) {
-      $self->{insert_tbl_sth}->execute($db, $tbl);
-   }
-
+   $self->{tables_for}->{$db}->{$tbl}  = 0;  # usage cnt, zero until used
    $self->{indexes_for}->{$db}->{$tbl} = $indexes;
    foreach my $index ( keys %$indexes ) {
       $indexes->{$index}->{cnt} = 0;
-      if ( $self->{save_results} ) {
-         $self->{insert_index_sth}->execute($db, $tbl, $index);
-      }
-      MKDEBUG && _d("Added index", $db, $tbl, $index);
    }
+
+   return;
+}
+
+sub add_query {
+   my ( $self, %args ) = @_;
+   my @required_args = qw(query_id fingerprint sample);
+   foreach my $arg ( @required_args  ) {
+      die "I need a $arg argument" unless defined $args{$arg};
+   }
+   my ($query_id, $fingerprint, $sample) = @args{@required_args};
+
+   $self->{queries}->{$query_id} = {
+      fingerprint => $fingerprint,
+      sample      => $sample,
+   };
 
    return;
 }
@@ -4029,21 +4015,6 @@ sub add_table_usage {
    my ( $self, $db, $tbl ) = @_;
    die "I need a db and table" unless defined $db && defined $tbl;
    ++$self->{tables_for}->{$db}->{$tbl};
-   if ( $self->{save_results} ) {
-      $self->{insert_tbl_sth}->execute($db, $tbl);
-   }
-   return;
-}
-
-sub add_query {
-   my ( $self, %args ) = @_;
-   return unless $self->{save_results};
-   my @required_args = qw(query_id fingerprint sample);
-   foreach my $arg ( @required_args  ) {
-      die "I need a $arg argument" unless defined $args{$arg};
-   }
-   my ($query_id, $fingerprint, $sample) = @args{@required_args};
-   $self->{insert_query_sth}->execute($query_id, $fingerprint, $sample);
    return;
 }
 
@@ -4055,28 +4026,19 @@ sub add_index_usage {
    }
    my ($usage) = @args{@required_args};
 
-   ACCESS:
    foreach my $access ( @$usage ) {
       my ($db, $tbl, $idx, $alt) = @{$access}{qw(db tbl idx alt)};
-
-      INDEX:
       foreach my $index ( @$idx ) {
          $self->{indexes_for}->{$db}->{$tbl}->{$index}->{cnt}++;
 
-         if ( $self->{save_results} ) {
-            $self->{insert_index_sth}->execute($db, $tbl, $index);
-            if ( $args{query_id} ) {
-               $self->{insert_index_usage_sth}->execute(
-                  $args{query_id}, $db, $tbl, $index);
-
-               foreach my $alt_index ( @$alt ) {
-                  $self->{insert_index_alt_sth}->execute(
-                     $args{query_id}, $db, $tbl, $index, $alt_index);
-               }
+         if ( my $query_id = $args{query_id} ) {
+            $self->{index_usage}->{$query_id}->{$db}->{$tbl}->{$index}++;
+            foreach my $alt_index ( @$alt ) {
+               $self->{alt_index_usage}->{$query_id}->{$db}->{$tbl}->{$index}->{$alt_index}++;
             }
          }
 
-      }  # INDEX
+      } # INDEX
    } # ACCESS
 
    return;
@@ -4085,9 +4047,7 @@ sub add_index_usage {
 sub find_unused_indexes {
    my ( $self, $callback ) = @_;
    die "I need a callback" unless $callback;
-
-   my %indexes_for = %{$self->{indexes_for}};
-   my %tables_for  = %{$self->{tables_for}};
+   MKDEBUG && _d("Finding unused indexes");
 
    DATABASE:
    foreach my $db ( sort keys %{$self->{indexes_for}} ) {
@@ -4101,6 +4061,7 @@ sub find_unused_indexes {
                push @unused_indexes, $indexes->{$index};
             }
          }
+
          if ( @unused_indexes ) {
             $callback->(
                {  db  => $db,
@@ -4111,6 +4072,91 @@ sub find_unused_indexes {
          }
       } # TABLE
    } # DATABASE
+
+   return;
+}
+
+sub save_results {
+   my ( $self, %args ) = @_;
+   my @required_args = qw(dbh db);
+   foreach my $arg ( @required_args  ) {
+      die "I need a $arg argument" unless defined $args{$arg};
+   }
+   my ($dbh, $db) = @args{@required_args};
+   MKDEBUG && _d("Saving results to tables in database", $db);
+
+   MKDEBUG && _d("Saving index data");
+   my $insert_index_sth = $dbh->prepare(
+      "INSERT INTO `$db`.`indexes` (db, tbl, idx, cnt) VALUES (?, ?, ?, ?) "
+      . "ON DUPLICATE KEY UPDATE cnt = cnt + ?");
+   foreach my $db ( keys %{$self->{indexes_for}} ) {
+      foreach my $tbl ( keys %{$self->{indexes_for}->{$db}} ) {
+         foreach my $index ( keys %{$self->{indexes_for}->{$db}->{$tbl}} ) {
+            my $cnt = $self->{indexes_for}->{$db}->{$tbl}->{$index}->{cnt};
+            $insert_index_sth->execute($db, $tbl, $index, $cnt, $cnt);
+         }
+      }
+   }
+
+   MKDEBUG && _d("Saving table data");
+   my $insert_tbl_sth = $dbh->prepare(
+      "INSERT INTO `$db`.`tables` (db, tbl, cnt) VALUES (?, ?, ?) "
+      . "ON DUPLICATE KEY UPDATE cnt = cnt + ?");
+   foreach my $db ( keys %{$self->{tables_for}} ) {
+      foreach my $tbl ( keys %{$self->{tables_for}->{$db}} ) {
+         my $cnt = $self->{tables_for}->{$db}->{$tbl};
+         $insert_tbl_sth->execute($db, $tbl, $cnt, $cnt);
+      }
+   }
+
+   MKDEBUG && _d("Save query data");
+   my $insert_query_sth = $dbh->prepare(
+      "INSERT IGNORE INTO `$db`.`queries` (query_id, fingerprint, sample) "
+      . " VALUES (CONV(?, 16, 10), ?, ?)");
+   foreach my $query_id ( keys %{$self->{queries}} ) {
+      my $query = $self->{queries}->{$query_id};
+      $insert_query_sth->execute(
+         $query_id, $query->{fingerprint}, $query->{sample});
+   }
+
+   MKDEBUG && _d("Saving index usage data");
+   my $insert_index_usage_sth = $dbh->prepare(
+      "INSERT INTO `$db`.`index_usage` (query_id, db, tbl, idx, cnt) "
+      . "VALUES (CONV(?, 16, 10), ?, ?, ?, ?) "
+      . "ON DUPLICATE KEY UPDATE cnt = cnt + ?");
+   foreach my $query_id ( keys %{$self->{index_usage}} ) {
+      foreach my $db ( keys %{$self->{index_usage}->{$query_id}} ) {
+         foreach my $tbl ( keys %{$self->{index_usage}->{$query_id}->{$db}} ) {
+            my $indexes = $self->{index_usage}->{$query_id}->{$db}->{$tbl};
+            foreach my $index ( keys %$indexes ) {
+               my $cnt = $indexes->{$index};
+               $insert_index_usage_sth->execute(
+                  $query_id, $db, $tbl, $index, $cnt, $cnt);
+            }
+         }
+      }
+   }
+
+   MKDEBUG && _d("Saving alternate index usage data");
+   my $insert_index_alt_sth = $dbh->prepare(
+      "INSERT INTO `$db`.`index_alternatives` "
+      . "(query_id, db, tbl, idx, alt_idx, cnt) "
+      . "VALUES (CONV(?, 16, 10), ?, ?, ?, ?, ?) "
+      . "ON DUPLICATE KEY UPDATE cnt = cnt + ?");
+   foreach my $query_id ( keys %{$self->{alt_index_usage}} ) {
+      foreach my $db ( keys %{$self->{alt_index_usage}->{$query_id}} ) {
+         foreach my $tbl ( keys %{$self->{alt_index_usage}->{$query_id}->{$db}} ) {
+            foreach my $index ( keys %{$self->{alt_index_usage}->{$query_id}->{$db}->{$tbl}} ){
+               my $alt_indexes = $self->{alt_index_usage}->{$query_id}->{$db}->{$tbl}->{$index};
+               foreach my $alt_index ( keys %$alt_indexes ) {
+                  my $cnt = $alt_indexes->{$alt_index};
+                  $insert_index_alt_sth->execute(
+                     $query_id, $db, $tbl, $index, $alt_index, $cnt, $cnt);
+               }
+            }
+         }
+      }
+   }
 
    return;
 }
@@ -4404,8 +4450,6 @@ sub main {
    my $si     = new SchemaIterator(Quoter => $q);
    my $iu     = new IndexUsage(
       QueryRewriter => $qr,
-      dbh           => $res_dbh,
-      db            => $res_db,
    );
    my $exa    = new ExplainAnalyzer(
       QueryRewriter => $qr,
@@ -4648,6 +4692,13 @@ sub main {
    # ########################################################################
    # All done!  Now print the reports, maybe.
    # ########################################################################
+   if ( $res_dbh ) {
+      $iu->save_results(
+         dbh => $res_dbh,
+         db  => $res_db,
+      );
+   }
+
    if ( $o->get('report') ) {
       print_reports(
          dbh     => $dbh,
